<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Virtual Pantry</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_new">Add Item</string>
    <string name="action_share">Share</string>
    <string name="action_sort">Sort by...</string>
    <string name="action_help">Help</string>
    <string name="action_recipe">Find Recipe</string>
    <string name="title_activity_pantry">My Pantry</string>
    <string name="title_activity_shopping_list">Shopping List</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="editImage">Edit</string>

    <string-array name="category_array">
        <item>Beverage</item>
        <item>Protein</item>
        <item>Fruit</item>
        <item>Vegetable</item>
        <item>Dairy</item>
        <item>Frozen</item>
        <item>Condiment</item>
        <item>Sweet</item>
        <item>Snack</item>
        <item>Grain</item>
        <item>Fat</item>
        <item>Other</item>
    </string-array>
    <string-array name="unit_array">
        <item>g(s)</item>
        <item>oz(s)</item>
        <item>lb(s)</item>
        <item>fl oz(s)</item>
        <item>cup(s)</item>
        <item>pt(s)</item>
        <item>gal(s)</item>
        <item>mL(s)</item>
        <item>L(s)</item>
        <item>can(s)</item>
        <item>bottle(s)</item>
        <item>tub(s)</item>
        <item>box(es)</item>
        <item>bag(s)</item>
        <item>loaf</item>
        <item>Other</item>
        <item>(No Unit)</item>
    </string-array>

    <string name="category_prompt">Select Category</string>
    <string name="unit_prompt">Select Units</string>
    <string name="action_register">Register</string>
    <string name="pantry_sort_preference">Default Pantry Sorting</string>

    <string-array name="pantry_sort_preferences_entries">
        <item>Alphabetical</item>
        <item>By Category</item>
        <item>By Expiration Date</item>
    </string-array>
    <string-array name="pantry_sort_preferences_values">
        <item>alphabetical</item>
        <item>category</item>
        <item>expiration date</item>
    </string-array>

    <string name="pantry_sort_preferences_default">category</string>
    <string name="shopping_list_sort_preference">Default Shopping List Sorting</string>

    <string-array name="shopping_list_sort_preferences_entries">
        <item>Alphabetical</item>
        <item>By Category</item>
    </string-array>
    <string-array name="shopping_list_sort_preferences_values">
        <item>alphabetical</item>
        <item>category</item>
    </string-array>

    <string name="shopping_list_sort_preferences_default">category</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
